# src/docs/swagger.yaml
@@ -187,6 +187,19 @@ definitions:
     - carModelId
     - message
     type: object
+  github_com_salmantaghooni_golang-car-web-api_src_api_dto.CreateCarModelPriceHistoryRequest:
+    properties:
+      carModelYearId:
+        type: integer
+      price:
+        type: number
+      priceAt:
+        type: string
+    required:
+    - carModelYearId
+    - price
+    - priceAt
+    type: object
   github_com_salmantaghooni_golang-car-web-api_src_api_dto.CreateCarModelPropertyRequest:
     properties:
       carModelId:
@@ -421,6 +434,23 @@ definitions:
       items:
         items:
           $ref: '#/definitions/github_com_salmantaghooni_golang-car-web-api_src_api_dto.CarModelCommentResponse'
+        type: array
+      pageNumber:
+        type: integer
+      totalPages:
+        type: integer
+      totalRows:
+        type: integer
+    type: object
+  ? github_com_salmantaghooni_golang-car-web-api_src_api_dto.PagedList-github_com_salmantaghooni_golang-car-web-api_src_api_dto_CarModelPriceHistoryResponse
+  : properties:
+      hasNextPage:
+        type: boolean
+      hasPreviousPage:
+        type: boolean
+      items:
+        items:
+          $ref: '#/definitions/github_com_salmantaghooni_golang-car-web-api_src_api_dto.CarModelPriceHistoryResponse'
         type: array
       pageNumber:
         type: integer
@@ -775,6 +805,13 @@ definitions:
         type: string
     required:
     - message
+    type: object
+  github_com_salmantaghooni_golang-car-web-api_src_api_dto.UpdateCarModelPriceHistoryRequest:
+    properties:
+      price:
+        type: number
+      priceAt:
+        type: string
     type: object
   github_com_salmantaghooni_golang-car-web-api_src_api_dto.UpdateCarModelPropertyRequest:
     properties:
@@ -1296,6 +1333,169 @@ paths:
       summary: Get CarModelComments
       tags:
       - CarModelComments
+  /v1/car-model-price-histories/:
+    post:
+      consumes:
+      - application/json
+      description: Create a CarModelPriceHistory
+      parameters:
+      - description: Create a CarModelPriceHistory
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_salmantaghooni_golang-car-web-api_src_api_dto.CreateCarModelPriceHistoryRequest'
+      responses:
+        "201":
+          description: CarModelPriceHistory response
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_salmantaghooni_golang-car-web-api_src_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/github_com_salmantaghooni_golang-car-web-api_src_api_dto.CarModelPriceHistoryResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/github_com_salmantaghooni_golang-car-web-api_src_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Create a CarModelPriceHistory
+      tags:
+      - CarModelPriceHistories
+  /v1/car-model-price-histories/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a CarModelPriceHistory
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: response
+          schema:
+            $ref: '#/definitions/github_com_salmantaghooni_golang-car-web-api_src_api_helper.BaseHttpResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/github_com_salmantaghooni_golang-car-web-api_src_api_helper.BaseHttpResponse'
+        "404":
+          description: Not found
+          schema:
+            $ref: '#/definitions/github_com_salmantaghooni_golang-car-web-api_src_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Delete a CarModelPriceHistory
+      tags:
+      - CarModelPriceHistories
+    get:
+      consumes:
+      - application/json
+      description: Get a CarModelPriceHistory
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: CarModelPriceHistory response
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_salmantaghooni_golang-car-web-api_src_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/github_com_salmantaghooni_golang-car-web-api_src_api_dto.CarModelPriceHistoryResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/github_com_salmantaghooni_golang-car-web-api_src_api_helper.BaseHttpResponse'
+        "404":
+          description: Not found
+          schema:
+            $ref: '#/definitions/github_com_salmantaghooni_golang-car-web-api_src_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Get a CarModelPriceHistory
+      tags:
+      - CarModelPriceHistories
+    put:
+      consumes:
+      - application/json
+      description: Update a CarModelPriceHistory
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update a CarModelPriceHistory
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_salmantaghooni_golang-car-web-api_src_api_dto.UpdateCarModelPriceHistoryRequest'
+      responses:
+        "200":
+          description: CarModelPriceHistory response
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_salmantaghooni_golang-car-web-api_src_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/github_com_salmantaghooni_golang-car-web-api_src_api_dto.CarModelPriceHistoryResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/github_com_salmantaghooni_golang-car-web-api_src_api_helper.BaseHttpResponse'
+        "404":
+          description: Not found
+          schema:
+            $ref: '#/definitions/github_com_salmantaghooni_golang-car-web-api_src_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Update a CarModelPriceHistory
+      tags:
+      - CarModelPriceHistories
+  /v1/car-model-price-histories/get-by-filter:
+    post:
+      consumes:
+      - application/json
+      description: Get CarModelPriceHistories
+      parameters:
+      - description: Request
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_salmantaghooni_golang-car-web-api_src_api_dto.PaginationInputWithFilter'
+      responses:
+        "200":
+          description: CarModelPriceHistory response
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_salmantaghooni_golang-car-web-api_src_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/github_com_salmantaghooni_golang-car-web-api_src_api_dto.PagedList-github_com_salmantaghooni_golang-car-web-api_src_api_dto_CarModelPriceHistoryResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/github_com_salmantaghooni_golang-car-web-api_src_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Get CarModelPriceHistories
+      tags:
+      - CarModelPriceHistories
   /v1/car-model-properties/:
     post:
       consumes:
